ai-n-service/charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &ai-n-service ai-n-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: REPLEACE_CLASS_NAME
  rules:
    - host: REPLEACE_HOST_NAME
      http:
        paths:
          - pathType: Prefix
            path: /ai-n-service(/|$)(.*)
            backend:
              service:
                name: *ai-n-service
                port:
                  name: api
